--- a/java/ChangeLog.txt
+++ b/java/ChangeLog.txt
@@ -1,3 +1,7 @@
+2020-09-08 Version: 0.0.3
+1. change checked exception to unchecked exception
+2. change jdk 8 to jdk 7
+
 2020-03-05 Version: 0.0.2
 1. update read
 
